# keccakminer

./: CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
cmake/: CompilerSettings.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
keccakminer/: CMakeLists.txt  ethminer.rc  main.cpp
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Worker.cpp  Worker.h
libhwmon/: CMakeLists.txt  wrapnvml.cpp
libkeccak-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libkeccak-cl/kernels/: README.md
libkeccak-cl/kernels/cl/: keccak.cl
libkeccak-cpu/: CPUMiner.cpp  CPUMiner.h
libkeccak-cuda/: CUDAMiner.cpp  CUDAMiner.h
libkeccakcore/: CMakeLists.txt  Farm.cpp  Farm.h  KeccakAux.cpp  KeccakAux.h  Miner.cpp  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
scripts/: testpools.bash
